--- a/public/views/publico-confirmacao.html
+++ b/public/views/publico-confirmacao.html
@@ -6,7 +6,7 @@
     <div class="grid-row">
       <div class="grid-xs-12">
         <a href="/{{event.slug}}" class="clear-decoration">
-          <img src="/uploads/{{event.image}}" class="img block" alt="Matheus e Marcela">
+          <img src="/uploads/{{event.image}}" class="img block" alt="{{event.name}}">
           <div class="shadow-banner absolute position-bottom position-left position-right padding-sm margin-left-sm margin-right-sm">
             <h1 class="text-xl text-white align-center clear-margin padding-top-xl">{{event.name}} &hearts; {{event.date | date:'dd/MM/yyyy'}}</h1>
           </div>
