--- a/public/views/login.html
+++ b/public/views/login.html
@@ -4,11 +4,11 @@
     <!-- content -->
     <div class="grid-lg-4 grid-lg-offset-4 grid-sm-6 grid-sm-offset-3 grid-xs-12 margin-top-xl">
       <div class="bg-white box-shadow margin-top-xl margin-bottom-sm">
-        <div class="login-header bg-secondary padding-top-sm padding-bottom-sm padding-left-xl padding-right-xl">
-          <h2 class="text-lg text-white align-center">
+        <div class="login-header bg-primary padding-top-sm padding-bottom-sm padding-left-xl padding-right-xl">
+          <a href="/" class="text-lg text-white align-center block padding-md clear-decoration">
             <img src="img/icon-lista-de-presentes-white.png" class="align-top margin-right-sm" alt="LISTA DE PRESENTES">
             LOGIN
-          </h2>
+          </a>
         </div>
         <div class="login-content padding-xl">
           <div class="bg-light text-red text-center margin-bottom-lg padding-sm" ng-class="message.type" ng-show="message.status" role="alert">
