--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -1,17 +1,11 @@
-//Z-index
-$z-index-xl: 6;
-$z-index-lg: $z-index-xl - 1;
-$z-index-md: $z-index-lg - 2;
-$z-index-sm: $z-index-md - 3;
-$z-index-xs: $z-index-sm - 4;
-$z-index-xxs: $z-index-xs - 5;
 @import 'variables';
-body {
-  font-family: 'Open Sans', sans-serif;
+html {
+  height: 100%;
 }
 
-.box-shadow {
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+body {
+  height: 100%;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .clear-decoration {
@@ -20,42 +14,6 @@ body {
 
 .field {
   outline: none;
-}
-
-.shadow-banner {
-  background: linear-gradient(to top, rgba(0, 0, 0, .9), rgba(0, 0, 0, 0));
-}
-
-.vaquinha {
-  background: url('/img/vaquinha.png');
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.z-index-xl {
-  z-index: $z-index-xl;
-}
-
-.z-index-lg {
-  z-index: $z-index-lg;
-}
-
-.z-index-md {
-  z-index: $z-index-md;
-}
-
-.z-index-sm {
-  z-index: $z-index-sm;
-}
-
-.z-index-xs {
-  z-index: $z-index-xs;
-}
-
-.z-index-xxs {
-  z-index: $z-index-xxs;
 }
 
 .alert.success {
@@ -70,11 +28,65 @@ body {
   cursor: not-allowed;
 }
 
+.box-shadow {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.shadow-banner {
+  background: linear-gradient(to top, rgba(0, 0, 0, .9), rgba(0, 0, 0, 0));
+}
+
+.vaquinha {
+  background: url('/img/vaquinha.png');
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.user-header {
+  display: block;
+  text-align: center;
+  margin: 20px 0 10px 0;
+}
+
+.banner-home {
+  background: url('/img/home-bg.jpg') no-repeat center 0;
+  background-size: cover;
+  .banner-home-content {
+    height: 780px;
+    padding-top: 300px;
+  }
+}
+
 @media (max-width: 768px) {
-  #banner{padding: 0;}
-  #banner .grid-container{padding: 0;}
-  #banner .grid-row{margin: 0;}
-  #banner .grid-xs-12{padding: 0;}
-  #banner .shadow-banner{position: relative; margin: 0; background: none;}
-  #banner .shadow-banner h1{padding: 0; color: $color-secondary !important;}
+  #banner {
+    padding: 0;
+    .grid-container {
+      padding: 0;
+    }
+    .grid-row {
+      margin: 0;
+    }
+    .grid-xs-12 {
+      padding: 0;
+    }
+    .shadow-banner {
+      position: relative;
+      margin: 0;
+      background: none;
+      h1 {
+        padding: 0;
+        color: $color-secondary !important;
+      }
+    }
+  }
+}
+
+@media (min-width: 769px) {
+  .user-header {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
 }
