--- a/public/views/publico-vaquinha.html
+++ b/public/views/publico-vaquinha.html
@@ -16,7 +16,7 @@
   </div>
 </div>
 <!-- content -->
-<div class="grid-container margin-top-sm">
+<div class="grid-container margin-top-lg">
   <!-- products -->
   <div class="grid-row">
     <div class="grid-xs-12">
@@ -27,33 +27,33 @@
               <h2 class="text-lg text-default clear-margin">Vaquinha</h2>
             </div>
           </div>
-          <div class="grid-row margin-bottom-xl">
-            <div class="grid-xs-3">
+          <div class="grid-row">
+            <div class="grid-md-3 grid-sm-6 grid-xs-12 margin-bottom-xl">
               <label class="inline-block align-center pointer">
                 <input type="radio" ng-model="donationValue" value="100.00">
                 <img src="/uploads/presente-cafe.jpg" alt="" class="img">
-                <span class="text-lg text-default">R$ 100,00</span>
+                <span class="text-lg text-default block">R$ 100,00</span>
               </label>
             </div>
-            <div class="grid-xs-3">
+            <div class="grid-md-3 grid-sm-6 grid-xs-12 margin-bottom-xl">
               <label class="inline-block align-center pointer">
                 <input type="radio" ng-model="donationValue" value="150.00">
                 <img src="/uploads/presente-jantar.jpg" alt="" class="img">
-                <span class="text-lg text-default">R$ 150,00</span>
+                <span class="text-lg text-default block">R$ 150,00</span>
               </label>
             </div>
-            <div class="grid-xs-3">
+            <div class="grid-md-3 grid-sm-6 grid-xs-12 margin-bottom-xl">
               <label class="inline-block align-center pointer">
                 <input type="radio" ng-model="donationValue" value="200.00">
                 <img src="/uploads/presente-hospedagem.jpg" alt="" class="img">
-                <span class="text-lg text-default">R$ 200,00</span>
+                <span class="text-lg text-default block">R$ 200,00</span>
               </label>
             </div>
-            <div class="grid-xs-3">
+            <div class="grid-md-3 grid-sm-6 grid-xs-12 margin-bottom-xl">
               <label class="inline-block align-center pointer">
                 <input type="radio" ng-model="donationValue" value="500.00">
                 <img src="/uploads/presente-passagem.jpg" alt="" class="img">
-                <span class="text-lg text-default">R$ 500,00</span>
+                <span class="text-lg text-default block">R$ 500,00</span>
               </label>
             </div>
           </div>
