--- a/public/views/evento.html
+++ b/public/views/evento.html
@@ -31,6 +31,7 @@
             <div class="grid-xs-12">
               <label class="text-sm text-default">Site:</label>
               <input id="slug" class="field text-field text-field-lg" type="text" ng-model="event.slug" required>
+              <a ng-show="event.slug" class="text-xs text-secondary" href="http://presentes.matheusemarcela.com/{{event.slug}}" target="_blank">http://presentes.matheusemarcela.com/{{event.slug}}</a>
             </div>
           </div>
           <div class="grid-row margin-bottom-xl">
@@ -66,29 +67,25 @@
             <div class="grid-md-3 grid-sm-6 grid-xs-12 margin-bottom-lg">
               <label>
                 <img ng-src="/uploads/cover-default1.jpg" alt="Capa padrão 1" class="img">
-                <input type="radio" ng-model="event.image" value="cover-default1.jpg"> 
-                Capa padrão 1
+                <input type="radio" ng-model="event.image" value="cover-default1.jpg"> Capa padrão 1
               </label>
             </div>
             <div class="grid-md-3 grid-sm-6 grid-xs-12 margin-bottom-lg">
               <label>
                 <img ng-src="/uploads/cover-default2.jpg" alt="Capa padrão 2" class="img">
-                <input type="radio" ng-model="event.image" value="cover-default2.jpg">
-                Capa padrão 2
+                <input type="radio" ng-model="event.image" value="cover-default2.jpg"> Capa padrão 2
               </label>
             </div>
             <div class="grid-md-3 grid-sm-6 grid-xs-12 margin-bottom-lg">
               <label>
                 <img ng-src="/uploads/cover-default3.jpg" alt="Capa padrão 3" class="img">
-                <input type="radio" ng-model="event.image" value="cover-default3.jpg">
-                Capa padrão 3
+                <input type="radio" ng-model="event.image" value="cover-default3.jpg"> Capa padrão 3
               </label>
             </div>
             <div class="grid-md-3 grid-sm-6 grid-xs-12 margin-bottom-lg">
               <label>
                 <img ng-src="/uploads/cover-default4.jpg" alt="Capa padrão 4" class="img">
-                <input type="radio" ng-model="event.image" value="cover-default4.jpg">
-                Capa padrão 4
+                <input type="radio" ng-model="event.image" value="cover-default4.jpg"> Capa padrão 4
               </label>
             </div>
             <div class="grid-xs-12 overflow-hidden">
