--- a/public/views/publico-vaquinha.html
+++ b/public/views/publico-vaquinha.html
@@ -21,7 +21,7 @@
   <div class="grid-row">
     <div class="grid-xs-12">
       <div class="bg-white box-shadow padding-top-md padding-right-xl padding-bottom-md padding-left-xl">
-        <form name="donation.form" action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post" onsubmit="PagSeguroLightbox(this); return false;">
+        <form id="donationForm" name="donation.form" action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post" onsubmit="PagSeguroLightbox(this); return false;">
           <div class="grid-row margin-bottom-xl">
             <div class="grid-xs-12">
               <h2 class="text-lg text-default clear-margin">Vaquinha</h2>
@@ -30,31 +30,41 @@
           <div class="grid-row">
             <div class="grid-md-3 grid-sm-6 grid-xs-12 margin-bottom-xl">
               <label class="inline-block align-center pointer">
-                <input type="radio" ng-model="donationValue" value="100.00">
+                <input type="radio" ng-model="donation.value" value="100.00">
                 <img src="/uploads/presente-cafe.jpg" alt="" class="img">
                 <span class="text-lg text-default block">R$ 100,00</span>
               </label>
             </div>
             <div class="grid-md-3 grid-sm-6 grid-xs-12 margin-bottom-xl">
               <label class="inline-block align-center pointer">
-                <input type="radio" ng-model="donationValue" value="150.00">
+                <input type="radio" ng-model="donation.value" value="150.00">
                 <img src="/uploads/presente-jantar.jpg" alt="" class="img">
                 <span class="text-lg text-default block">R$ 150,00</span>
               </label>
             </div>
             <div class="grid-md-3 grid-sm-6 grid-xs-12 margin-bottom-xl">
               <label class="inline-block align-center pointer">
-                <input type="radio" ng-model="donationValue" value="200.00">
+                <input type="radio" ng-model="donation.value" value="200.00">
                 <img src="/uploads/presente-hospedagem.jpg" alt="" class="img">
                 <span class="text-lg text-default block">R$ 200,00</span>
               </label>
             </div>
             <div class="grid-md-3 grid-sm-6 grid-xs-12 margin-bottom-xl">
               <label class="inline-block align-center pointer">
-                <input type="radio" ng-model="donationValue" value="500.00">
+                <input type="radio" ng-model="donation.value" value="500.00">
                 <img src="/uploads/presente-passagem.jpg" alt="" class="img">
                 <span class="text-lg text-default block">R$ 500,00</span>
               </label>
+            </div>
+          </div>
+          <div ng-show="donation.value" class="grid-row margin-bottom-xl">
+            <div class="grid-xs-6">
+              <label class="text-sm text-default">Nome:</label>
+              <input id="name" class="field text-field text-field-lg" type="text" ng-model="donation.name" required>
+            </div>
+            <div class="grid-xs-6">
+              <label class="text-sm text-default">E-mail:</label>
+              <input id="name" class="field text-field text-field-lg" type="text" ng-model="donation.email" required>
             </div>
           </div>
           <div class="grid-row margin-bottom-xl">
@@ -62,13 +72,13 @@
               <input name="iot" value="button" type="hidden">
               <input name="currency" value="BRL" type="hidden">
               <input name="receiverEmail" value="mxczpiscioneri@gmail.com" type="hidden">
-              <input name="reference" value="{{event.slug}}" type="hidden">
+              <input id="reference" name="reference" value="{{event.slug}}" type="hidden">
               <input name="itemId1" value="0001" type="hidden">
               <input name="itemDescription1" value="Ajuda para os noivos Matheus e Marcela" type="hidden">
-              <input name="itemAmount1" ng-value="donationValue" type="hidden">
+              <input name="itemAmount1" ng-value="donation.value" type="hidden">
               <input name="itemQuantity1" value="1" type="hidden">
               <input name="itemWeight1" value="1" type="hidden">
-              <input name="submit" value="Pagar" type="submit" class="btn-lg btn-primary" alt="Pagar com PagSeguro">
+              <button class="btn-lg btn-primary" ng-click="saveDonation(donation)">Pagar</button>
             </div>
           </div>
         </form>
