--- a/public/views/inc_sidebar.html
+++ b/public/views/inc_sidebar.html
@@ -16,8 +16,8 @@
       <a ng-class="{'active text-primary': menuActive == 'myPresents'}" href="/meus-presentes" class="block padding-sm text-default clear-decoration">Meus presentes</a>
     </li>
     <li class="list-item bd-bottom-xs bd-bottom-solid bd-gray">
-      <a ng-class="{'active text-primary': menuActive == '/vaquinha'}" href="/vaquinha" class="block padding-sm text-default clear-decoration">Vaquinha</a>
-    </li>
+      <a ng-class="{'active text-primary': menuActive == 'donations'}" href="/vaquinha" class="block padding-sm text-default clear-decoration">Vaquinha</a>
+    <li>
     <li class="list-item bd-bottom-xs bd-bottom-solid bd-gray">
       <a ng-class="{'active text-primary': menuActive == 'confirmations'}" href="/confirmacoes" class="block padding-sm text-default clear-decoration">Confirmações de Presença</a>
     <li>
