--- a/public/views/publico.html
+++ b/public/views/publico.html
@@ -16,7 +16,7 @@
   </div>
 </div>
 <!-- vaquinha -->
-<div class="grid-container-fluid margin-top-xl vaquinha padding-xl">
+<div ng-show="event.emailPagseguro && event.tokenPagseguro" class="grid-container-fluid margin-top-xl vaquinha padding-xl">
   <div class="grid-row">
     <div class="grid-xs-12">
       <h2 class="text-lg text-white align-center margin-top-lg">Quer contribui para a vaquinha dos noivos?</h2>
