Fix donation amount and create a page to show donations

--- a/public/views/evento.html
+++ b/public/views/evento.html
@@ -111,6 +111,7 @@
             <div class="grid-xs-6">
               <label class="text-sm text-default">Token do Pagseguro:</label>
               <input class="field text-field text-field-lg" type="text" ng-model="event.tokenPagseguro">
+              <a class="text-xs text-secondary" href="https://pagseguro.uol.com.br/preferencias/integracoes.jhtml" target="_blank">Gerar Token no Pagseguro</a>
             </div>
           </div>
           <div class="grid-row margin-bottom-xl">
