--- a/public/views/vaquinha.html
+++ b/public/views/vaquinha.html
@@ -3,13 +3,6 @@
 <!-- main -->
 <div class="grid-container margin-top-xl">
   <div class="grid-row">
-    <!-- alert message -->
-    <div class="grid-xs-12">
-      <div class="alert text-white text-center margin-bottom-lg padding-lg" ng-class="message.type" ng-show="message.status" role="alert">
-        {{message.text}}
-        <span class="pull-right pointer" ng-click="closeAlert()"><span aria-hidden="true">&times;</span></span>
-      </div>
-    </div>
     <!-- menu -->
     <ng-include src="'views/inc_sidebar.html'"></ng-include>
     <!-- content -->
@@ -18,6 +11,22 @@
         <div class="grid-row">
           <div class="grid-xs-12">
             <h2 class="text-lg text-default clear-margin">Vaquinha</h2>
+          </div>
+        </div>
+        <div class="grid-row margin-top-xl margin-bottom-xl">
+          <div class="grid-xs-12">
+            <ul class="list">
+              <li ng-repeat="item in donations" class="list-item margin-bottom-lg">
+                <div class="bg-white bd-xs bd-solid bd-gray bd-radius-md padding-lg">
+                  <p class="text-xs text-default margin-top-xs margin-bottom-sm"><span class="bold">Nome:</span> {{item.name}}</p>
+                  <p class="text-xs text-default margin-top-xs margin-bottom-sm"><span class="bold">E-mail:</span> {{item.email}}</p>
+                  <p class="text-xs text-default margin-top-xs margin-bottom-sm"><span class="bold">Valor:</span> {{item.amount}}</p>
+                  <p class="text-xs text-default margin-top-xs margin-bottom-sm"><span class="bold">Status:</span> {{item.status}}</p>
+                  <p class="text-xs text-default margin-top-xs margin-bottom-sm"><span class="bold">Transação:</span> {{item.transaction}}</p>
+                  <p class="text-xs text-default margin-top-xs margin-bottom-sm"><span class="bold">Data:</span> {{item.created | date:'dd/MM/yyyy HH:mm:ss'}}</p>
+                </div>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
