Get notification of Pagseguro and update donation

--- a/public/views/publico-vaquinha.html
+++ b/public/views/publico-vaquinha.html
@@ -77,6 +77,6 @@
     </div>
   </div>
 </div>
-<script type="text/javascript" src="https://stc.sandbox.pagseguro.uol.com.br/pagseguro/api/v2/checkout/pagseguro.lightbox.js"></script>
+<script type="text/javascript" src="https://stc.pagseguro.uol.com.br/pagseguro/api/v2/checkout/pagseguro.lightbox.js"></script>
 <!-- footer -->
 <ng-include src="'views/inc_footer.html'"></ng-include>
