Show empty page message

--- a/public/views/confirmacoes.html
+++ b/public/views/confirmacoes.html
@@ -29,6 +29,7 @@
                 </div>
               </li>
             </ul>
+            <p ng-show="confirmations.length == 0" class="text-default text-sm">Nenhuma confirmação foi realizada...</p>
           </div>
         </div>
       </div>
