--- a/public/views/meus-presentes.html
+++ b/public/views/meus-presentes.html
@@ -20,7 +20,7 @@
             <h2 class="text-lg text-default clear-margin">Meus presentes</h2>
           </div>
         </div>
-        <div class="grid-row margin-top-xl">
+        <div ng-show="myPresents.length > 0" class="grid-row margin-top-xl">
           <form>
             <div class="grid-xs-12">
               <label for="filter-price" class="text-xs text-default margin-bottom-xs">Procurar produtos:</label>
@@ -43,6 +43,7 @@
               </div>
             </li>
           </ul>
+          <p ng-show="myPresents.length == 0" class="text-default text-sm">Nenhum presente foi comprado...</p>
         </div>
       </div>
     </div>
