--- a/public/views/vaquinha.html
+++ b/public/views/vaquinha.html
@@ -27,6 +27,7 @@
                 </div>
               </li>
             </ul>
+            <p ng-show="donations.length == 0" class="text-default text-sm">Nenhuma doação foi realizada...</p>
           </div>
         </div>
       </div>
